Add icingacli-director check to ITL
Including documentation.
Add a hint to the documentation of all icingacli commands that Icinga 2 has to be allowed access to the icingaweb2 directory.

fixes: #5920

--- a/itl/plugins-contrib.d/icingacli.conf
+++ b/itl/plugins-contrib.d/icingacli.conf
@@ -51,3 +51,20 @@ object CheckCommand "icingacli-businessprocess" {
 	vars.icingacli_businessprocess_details = false
 }
 
+object CheckCommand "icingacli-director" {
+        import "icingacli"
+
+        command += [ "director", "health", "check" ]
+
+        arguments = {
+                "--check" = {
+                        value = "$icingacli_director_check$"
+                        description = "Run only a specific test suite"
+                }
+                "--db" = {
+                        value = "$icingacli_director_db$"
+                        description = "Use a specific Icinga Web DB resource"
+                }
+        }
+}
+
