--- a/lib/db_ido_pgsql/CMakeLists.txt
+++ b/lib/db_ido_pgsql/CMakeLists.txt
@@ -15,44 +15,42 @@
 # along with this program; if not, write to the Free Software Foundation
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA.
 
-if(PostgreSQL_FOUND)
-  mkclass_target(idopgsqlconnection.ti idopgsqlconnection.tcpp idopgsqlconnection.thpp)
+mkclass_target(idopgsqlconnection.ti idopgsqlconnection.tcpp idopgsqlconnection.thpp)
 
-  set(db_ido_pgsql_SOURCES
-    idopgsqlconnection.cpp idopgsqlconnection.thpp
-  )
+set(db_ido_pgsql_SOURCES
+  idopgsqlconnection.cpp idopgsqlconnection.thpp
+)
 
-  if(ICINGA2_UNITY_BUILD)
-      mkunity_target(db_ido_pgsql db_ido_pgsql db_ido_pgsql_SOURCES)
-  endif()
-
-  add_library(db_ido_pgsql STATIC ${db_ido_pgsql_SOURCES})
-
-  target_link_libraries(db_ido_pgsql ${Boost_LIBRARIES} ${PostgreSQL_LIBRARIES} base config icinga db_ido)
-
-  set_target_properties (
-    db_ido_pgsql PROPERTIES
-    FOLDER Components
-  )
-
-  install_if_not_exists(
-    ${PROJECT_SOURCE_DIR}/etc/icinga2/features-available/ido-pgsql.conf
-    ${CMAKE_INSTALL_SYSCONFDIR}/icinga2/features-available
-  )
-
-  install(
-    DIRECTORY schema
-    DESTINATION ${CMAKE_INSTALL_DATADIR}/icinga2-ido-pgsql
-    FILES_MATCHING PATTERN "*.sql"
-  )
-
-  install(
-    DIRECTORY schema/upgrade
-    DESTINATION ${CMAKE_INSTALL_DATADIR}/icinga2-ido-pgsql/schema
-    FILES_MATCHING PATTERN "*.sql"
-  )
-
-  set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}" PARENT_SCOPE)
-else()
-  message(FATAL_ERROR "You have selected PostgreSQL support, but PostgreSQL could not be found. You can disable the PostgreSQL IDO module using -DICINGA2_WITH_PGSQL=OFF.")
+if(ICINGA2_UNITY_BUILD)
+    mkunity_target(db_ido_pgsql db_ido_pgsql db_ido_pgsql_SOURCES)
 endif()
+
+add_library(db_ido_pgsql STATIC ${db_ido_pgsql_SOURCES})
+
+include_directories(${PostgreSQL_INCLUDE_DIRS})
+
+target_link_libraries(db_ido_pgsql ${Boost_LIBRARIES} base config icinga db_ido)
+
+set_target_properties (
+  db_ido_pgsql PROPERTIES
+  FOLDER Components
+)
+
+install_if_not_exists(
+  ${PROJECT_SOURCE_DIR}/etc/icinga2/features-available/ido-pgsql.conf
+  ${CMAKE_INSTALL_SYSCONFDIR}/icinga2/features-available
+)
+
+install(
+  DIRECTORY schema
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/icinga2-ido-pgsql
+  FILES_MATCHING PATTERN "*.sql"
+)
+
+install(
+  DIRECTORY schema/upgrade
+  DESTINATION ${CMAKE_INSTALL_DATADIR}/icinga2-ido-pgsql/schema
+  FILES_MATCHING PATTERN "*.sql"
+)
+
+set(CPACK_NSIS_EXTRA_INSTALL_COMMANDS "${CPACK_NSIS_EXTRA_INSTALL_COMMANDS}" PARENT_SCOPE)
