itl: Update all commands for PluginPath

--- a/itl/command-plugins-manubulon.conf
+++ b/itl/command-plugins-manubulon.conf
@@ -95,7 +95,7 @@ template CheckCommand "snmp-manubulon-command" {
 object CheckCommand "snmp-env" {
 	import "snmp-manubulon-command"
 
-	command = [ ManubulonPluginDir + "/check_snmp_env.pl" ]
+	plugin = "check_snmp_env.pl"
 
 	arguments += {
 		"-T" = {
@@ -129,7 +129,7 @@ object CheckCommand "snmp-env" {
 object CheckCommand "snmp-load" {
 	import "snmp-manubulon-command"
 
-	command = [ ManubulonPluginDir + "/check_snmp_load.pl" ]
+	plugin = "check_snmp_load.pl"
 
 	arguments += {
 		"-T" = {
@@ -159,7 +159,7 @@ object CheckCommand "snmp-load" {
 object CheckCommand "snmp-memory" {
 	import "snmp-manubulon-command"
 
-	command = [ ManubulonPluginDir + "/check_snmp_mem.pl" ]
+	plugin = "check_snmp_mem.pl"
 
 	arguments += {
 		"-f" = {
@@ -200,7 +200,7 @@ object CheckCommand "snmp-memory" {
 object CheckCommand "snmp-storage" {
 	import "snmp-manubulon-command"
 
-	command = [ ManubulonPluginDir + "/check_snmp_storage.pl" ]
+	plugin = "check_snmp_storage.pl"
 
 	arguments += {
 		"-m" = {
@@ -232,7 +232,7 @@ object CheckCommand "snmp-storage" {
 object CheckCommand "snmp-interface" {
 	import "snmp-manubulon-command"
 
-	command = [ ManubulonPluginDir + "/check_snmp_int.pl" ]
+	plugin = "check_snmp_int.pl"
 
 	arguments += {
 		"-n" = {
@@ -330,7 +330,7 @@ object CheckCommand "snmp-interface" {
 object CheckCommand "snmp-process" {
 	import "snmp-manubulon-command"
 
-	command = [ ManubulonPluginDir + "/check_snmp_process.pl" ]
+	plugin = "check_snmp_process.pl"
 
 	arguments += {
 		"-n" = {
@@ -376,7 +376,7 @@ object CheckCommand "snmp-process" {
 object CheckCommand "snmp-service" {
 	import "snmp-manubulon-command"
 
-	command = [ ManubulonPluginDir + "/check_snmp_win.pl" ]
+	plugin = "check_snmp_win.pl"
 
 	arguments += {
 		"-n" = {
