--- a/itl/command-plugins-windows.conf
+++ b/itl/command-plugins-windows.conf
@@ -18,7 +18,7 @@
  ******************************************************************************/
 
 object CheckCommand "disk-windows" {
-	command = [ PluginDir + "/check_disk.exe" ]
+	plugin = "check_disk.exe"
 
 	arguments = {
 		"-w" = {
@@ -52,7 +52,7 @@ object CheckCommand "disk-windows" {
 }
 
 object CheckCommand "load-windows" {
-	command = [ PluginDir + "/check_load.exe" ]
+	plugin = "check_load.exe"
 
 	arguments = {
 		"-w" = {
@@ -67,7 +67,7 @@ object CheckCommand "load-windows" {
 }
 
 object CheckCommand "memory-windows" {
-	command = [ PluginDir + "/check_memory.exe" ]
+	plugin = "check_memory.exe"
 
 	arguments = {
 		"-w" = {
@@ -88,7 +88,7 @@ object CheckCommand "memory-windows" {
 }
 
 object CheckCommand "network-windows" {
-	command = [ PluginDir + "/check_network.exe" ]
+	plugin = "check_network.exe"
 
 	arguments = {
 		"-w" = {
@@ -108,7 +108,7 @@ object CheckCommand "network-windows" {
 }
 
 object CheckCommand "perfmon-windows" {
-	command = [ PluginDir + "/check_perfmon.exe" ]
+	plugin = "check_perfmon.exe"
 
 	arguments = {
 		"-w" = {
@@ -144,7 +144,7 @@ object CheckCommand "perfmon-windows" {
 
 
 template CheckCommand "ping-common-windows" {
-	command = [ PluginDir + "/check_ping.exe" ]
+	plugin = "check_ping.exe"
 
 	arguments = {
 		"-H" = {
@@ -184,7 +184,11 @@ object CheckCommand "ping-windows" {
 object CheckCommand "ping4-windows" {
 	import "ping-common-windows"
 
-	command += [ "-4" ]
+	arguments += {
+		"-4" = {
+			set_if = true
+		}
+	}
 
 	vars.ping_win_address = "$address$"
 }
@@ -192,13 +196,17 @@ object CheckCommand "ping4-windows" {
 object CheckCommand "ping6-windows" {
 	import "ping-common-windows"
 
-	command += [ "-6" ]
+	arguments += {
+		"-6" = {
+			set_if = true
+		}
+	}
 
 	vars.ping_win_address = "$address6$"
 }
 
 object CheckCommand "procs-windows" {
-	command = [ PluginDir + "/check_procs.exe" ]
+	plugin = "check_procs.exe"
 
 	arguments = {
 		"-w" = {
@@ -217,7 +225,7 @@ object CheckCommand "procs-windows" {
 }
 
 object CheckCommand "service-windows" {
-	command = [ PluginDir + "/check_service.exe" ]
+	plugin = "check_service.exe"
 
 	arguments = {
 		"-w" = {
@@ -237,7 +245,7 @@ object CheckCommand "service-windows" {
 }
 
 object CheckCommand "swap-windows" {
-	command = [ PluginDir + "/check_swap.exe" ]
+	plugin = "check_swap.exe"
 
 	arguments = {
 		"-w" = {
@@ -258,7 +266,7 @@ object CheckCommand "swap-windows" {
 }
 
 object CheckCommand "update-windows" {
-	command = [ PluginDir + "/check_update.exe" ]
+	plugin = "check_update.exe"
 
 	arguments = {
 		"-w" = {
@@ -279,7 +287,7 @@ object CheckCommand "update-windows" {
 }
 
 object CheckCommand "uptime-windows" {
-	command = [ PluginDir + "/check_uptime.exe" ]
+	plugin = "check_uptime.exe"
 
 	arguments = {
 		"-w" = {
@@ -300,7 +308,7 @@ object CheckCommand "uptime-windows" {
 }
 
 object CheckCommand "users-windows" {
-	command = [ PluginDir + "/check_users.exe" ]
+	plugin = "check_users.exe"
 
 	arguments = {
 		"-w" = {
