--- a/itl/command-plugins.conf
+++ b/itl/command-plugins.conf
@@ -34,7 +34,7 @@ template CheckCommand "ipv4-or-ipv6" {
 }
 
 template CheckCommand "ping-common" {
-	command = [ PluginDir + "/check_ping" ]
+	plugin = "check_ping"
 
 	arguments = {
 		"-H" = {
@@ -75,7 +75,11 @@ object CheckCommand "ping" {
 object CheckCommand "ping4" {
 	import "ping-common"
 
-	command += [ "-4" ]
+	arguments += {
+		"-6" = {
+			set_if = true
+		}
+	}
 
 	vars.ping_address = "$address$"
 }
@@ -83,7 +87,11 @@ object CheckCommand "ping4" {
 object CheckCommand "ping6" {
 	import "ping-common"
 
-	command += [ "-6" ]
+	arguments += {
+		"-6" = {
+			set_if = true
+		}
+	}
 
 	vars.ping_address = "$address6$"
 }
@@ -112,12 +120,13 @@ object CheckCommand "hostalive6" {
 }
 
 template CheckCommand "fping-common" {
-	command = [
-		PluginDir + "/check_fping",
-		"$fping_address$"
-	]
+	plugin = "check_fping"
 
 	arguments = {
+		"address" = {
+			value = "$fping_address$"
+			skip_key = true
+		}
 		"-w" = {
 			value = "$fping_wrta$,$fping_wpl$%"
 			description = "warning threshold pair"
@@ -163,7 +172,11 @@ template CheckCommand "fping-common" {
 object CheckCommand "fping4" {
 	import "fping-common"
 
-	command += [ "-4" ]
+	arguments += {
+		"-4" = {
+			set_if = true
+		}
+	}
 
 	vars.fping_address = "$address$"
 }
@@ -171,7 +184,11 @@ object CheckCommand "fping4" {
 object CheckCommand "fping6" {
 	import "fping-common"
 
-	command += [ "-6" ]
+	arguments += {
+		"-6" = {
+			set_if = true
+		}
+	}
 
 	vars.fping_address = "$address6$"
 }
@@ -186,7 +203,7 @@ object CheckCommand "passive" {
 object CheckCommand "tcp" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_tcp" ]
+	plugin = "check_tcp"
 
 	arguments = {
 		"-H" = {
@@ -289,7 +306,7 @@ object CheckCommand "tcp" {
 object CheckCommand "ssl" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_tcp" ]
+	plugin = "check_tcp"
 
 	arguments = {
 		"-H" = {
@@ -334,21 +351,23 @@ object CheckCommand "ssl" {
 object CheckCommand "udp" {
 	import "ipv4-or-ipv6"
 
-	command = [
-		PluginDir + "/check_udp",
-		"-H", "$udp_address$",
-		"-p", "$udp_port$"
-	]
+	plugin = "check_udp"
 
 	arguments = {
+		"-H" = {
+			value = "$udp_address$"
+			required = true
+		}
+		"-p" = {
+			value = "$udp_port$"
+			required = true
+		}
 		"-s" = {
 			value = "$udp_send$"
-			required = true
 			description = "String to send to the server"
 		}
 		"-e" = {
 			value = "$udp_expect$"
-			required = true
 			description = " String to expect in server response"
 		}
 		"-q" = {
@@ -373,7 +392,7 @@ object CheckCommand "udp" {
 object CheckCommand "http" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_http" ]
+	plugin = "check_http"
 
 	arguments = {
 		"-H" = {
@@ -575,7 +594,7 @@ object CheckCommand "http" {
 object CheckCommand "ftp" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_ftp" ]
+	plugin = "check_ftp"
 
 	arguments = {
 		"-H" = {
@@ -678,7 +697,7 @@ object CheckCommand "ftp" {
 object CheckCommand "smtp" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_smtp" ]
+	plugin = "check_smtp"
 
 	arguments = {
 		"-H" = {
@@ -763,7 +782,7 @@ object CheckCommand "smtp" {
 object CheckCommand "ssmtp" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_ssmtp" ]
+	plugin = "check_ssmtp"
 
 	arguments = {
 		"-H" = {
@@ -852,7 +871,7 @@ object CheckCommand "ssmtp" {
 object CheckCommand "imap" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_imap" ]
+	plugin = "check_imap"
 
 	arguments = {
 		"-H" = {
@@ -941,7 +960,7 @@ object CheckCommand "imap" {
 object CheckCommand "simap" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_simap" ]
+	plugin = "check_simap"
 
 	arguments = {
 		"-H" = {
@@ -1030,7 +1049,7 @@ object CheckCommand "simap" {
 object CheckCommand "pop" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_pop" ]
+	plugin = "check_pop"
 
 	arguments = {
 		"-H" = {
@@ -1119,7 +1138,7 @@ object CheckCommand "pop" {
 object CheckCommand "spop" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_spop" ]
+	plugin = "check_spop"
 
 	arguments = {
 		"-H" = {
@@ -1208,7 +1227,7 @@ object CheckCommand "spop" {
 object CheckCommand "ntp_time" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_ntp_time" ]
+	plugin = "check_ntp_time"
 
 	arguments = {
 		"-H" = {
@@ -1257,7 +1276,7 @@ object CheckCommand "ntp_time" {
 object CheckCommand "ntp_peer" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_ntp_peer" ]
+	plugin = "check_ntp_peer"
 
 	arguments = {
 		"-H" = {
@@ -1326,7 +1345,7 @@ object CheckCommand "ntp_peer" {
 object CheckCommand "ssh" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_ssh" ]
+	plugin = "check_ssh"
 
 	arguments = {
 		"-p" = {
@@ -1358,7 +1377,7 @@ object CheckCommand "ssh" {
 }
 
 object CheckCommand "disk" {
-	command = [ PluginDir + "/check_disk" ]
+	plugin = "check_disk"
 
 	arguments = {
 		"-w" = {
@@ -1491,7 +1510,7 @@ object CheckCommand "disk" {
 }
 
 object CheckCommand "disk_smb" {
-	command = [ PluginDir + "/check_disk_smb" ]
+	plugin = "check_disk_smb"
 
 	arguments = {
 		"-H" = {
@@ -1537,7 +1556,7 @@ object CheckCommand "disk_smb" {
 }
 
 object CheckCommand "users" {
-	command = [ PluginDir + "/check_users" ]
+	plugin = "check_users"
 
 	arguments = {
 		"-w" = {
@@ -1555,7 +1574,7 @@ object CheckCommand "users" {
 }
 
 object CheckCommand "procs" {
-	command = [ PluginDir + "/check_procs" ]
+	plugin = "check_procs"
 
 	arguments = {
 		"-w" = {
@@ -1627,7 +1646,7 @@ object CheckCommand "procs" {
 }
 
 object CheckCommand "swap" {
-	command = [ PluginDir + "/check_swap" ]
+	plugin = "check_swap"
 
 	arguments = {
 		"-w" = {{
@@ -1661,7 +1680,7 @@ object CheckCommand "swap" {
 }
 
 object CheckCommand "load" {
-	command = [ PluginDir + "/check_load" ]
+	plugin = "check_load"
 
 	arguments = {
 		"-w" = {
@@ -1690,7 +1709,7 @@ object CheckCommand "load" {
 }
 
 object CheckCommand "snmp" {
-	command = [ PluginDir + "/check_snmp" ]
+	plugin = "check_snmp"
 
 	arguments = {
 		"-H" = {
@@ -1802,7 +1821,7 @@ object CheckCommand "snmp" {
 object CheckCommand "snmpv3" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_snmp" ]
+	plugin = "check_snmp"
 
 	arguments = {
 		"-H" = {
@@ -1913,7 +1932,7 @@ object CheckCommand "snmp-uptime" {
 }
 
 object CheckCommand "apt" {
-	command = [ PluginDir + "/check_apt" ]
+	plugin = "check_apt"
 
 	arguments = {
 		"--extra-opts" = {
@@ -1954,7 +1973,7 @@ object CheckCommand "apt" {
 }
 
 object CheckCommand "dhcp" {
-	command = [ PluginDir + "/check_dhcp" ]
+	plugin = "check_dhcp"
 
 	arguments = {
 		"-s" = {
@@ -1989,7 +2008,7 @@ object CheckCommand "dhcp" {
 object CheckCommand "dns" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_dns" ]
+	plugin = "check_dns"
 
 	arguments = {
 		"-H" = {
@@ -2037,7 +2056,7 @@ object CheckCommand "dns" {
 object CheckCommand "dig" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_dig" ]
+	plugin = "check_dig"
 
 	arguments = {
 		"-H" = {
@@ -2095,7 +2114,7 @@ object CheckCommand "dig" {
 object CheckCommand "nscp" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_nt" ]
+	plugin = "check_nt"
 
 	arguments = {
 		"-H" = {
@@ -2146,7 +2165,7 @@ object CheckCommand "nscp" {
 object CheckCommand "by_ssh" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_by_ssh" ]
+	plugin = "check_by_ssh"
 
 	arguments = {
 		"-H" = {
@@ -2218,7 +2237,7 @@ object CheckCommand "by_ssh" {
 object CheckCommand "ups" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_ups" ]
+	plugin = "check_ups"
 
 	arguments = {
 		"-H" = {
@@ -2264,7 +2283,7 @@ object CheckCommand "ups" {
 object CheckCommand "nrpe" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_nrpe" ]
+	plugin = "check_nrpe"
 
 	arguments = {
 		"-H" = {
@@ -2320,7 +2339,7 @@ object CheckCommand "nrpe" {
 object CheckCommand "hpjd" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_hpjd" ]
+	plugin = "check_hpjd"
 
 	arguments = {
 		"-H" = {
@@ -2341,7 +2360,7 @@ object CheckCommand "hpjd" {
 }
 
 object CheckCommand "icmp" {
-	command = [ PluginDir + "/check_icmp" ]
+	plugin = "check_icmp"
 
 	arguments = {
 		"-H" = {
@@ -2402,7 +2421,7 @@ object CheckCommand "icmp" {
 object CheckCommand "ldap" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_ldap" ]
+	plugin = "check_ldap"
 
 	arguments = {
 		"-H" = {
@@ -2480,7 +2499,7 @@ object CheckCommand "ldap" {
 }
 
 object CheckCommand "clamd" {
-	command = [ PluginDir + "/check_clamd" ]
+	plugin = "check_clamd"
 
 	arguments = {
 		"-H" = {
@@ -2582,7 +2601,7 @@ object CheckCommand "clamd" {
 }
 
 object CheckCommand "mailq" {
-	command = [ PluginDir + "/check_mailq" ]
+	plugin = "check_mailq"
 
 	arguments = {
 		"-w" = {
@@ -2621,7 +2640,7 @@ object CheckCommand "mailq" {
 object CheckCommand "pgsql" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_pgsql" ]
+	plugin = "check_pgsql"
 
 	arguments = {
 		"-H" = {
@@ -2680,7 +2699,7 @@ object CheckCommand "pgsql" {
 object CheckCommand "mysql" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_mysql" ]
+	plugin = "check_mysql"
 
 	arguments = {
 		"-H" = {
@@ -2761,7 +2780,7 @@ object CheckCommand "mysql" {
 }
 
 object CheckCommand "negate" {
-	command = [ PluginDir + "/negate" ]
+	plugin = "negate"
 
 	arguments = {
 		"-t" = {
@@ -2812,7 +2831,7 @@ object CheckCommand "negate" {
 }
 
 object CheckCommand "file_age" {
-	command = [ PluginDir + "/check_file_age" ]
+	plugin = "check_file_age"
 
 	arguments = {
 		"-w" = {
@@ -2845,7 +2864,7 @@ object CheckCommand "file_age" {
 }
 
 object CheckCommand "smart" {
-	command = [ PluginDir + "/check_ide_smart" ]
+	plugin = "check_ide_smart"
 
 	arguments = {
 		"-d" = {
@@ -2859,7 +2878,7 @@ object CheckCommand "smart" {
 object CheckCommand "breeze" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_breeze" ]
+	plugin = "check_breeze"
 
 	arguments = {
 		"-H" = {
@@ -2889,7 +2908,7 @@ object CheckCommand "breeze" {
 }
 
 object CheckCommand "flexlm" {
-	command = [ PluginDir + "/check_flexlm" ]
+	plugin = "check_flexlm"
 
 	arguments = {
 		"-F" = {
@@ -2907,7 +2926,7 @@ object CheckCommand "flexlm" {
 object CheckCommand "game" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_game" ]
+	plugin = "check_game"
 
 	arguments = {
 		"-P" = {
@@ -2956,7 +2975,7 @@ object CheckCommand "game" {
 object CheckCommand "mysql_query" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_mysql_query" ]
+	plugin = "check_mysql_query"
 
 	arguments = {
 		"-H" = {
@@ -3007,9 +3026,7 @@ object CheckCommand "mysql_query" {
 object CheckCommand "radius" {
 	import "ipv4-or-ipv6"
 
-	command = [
-		PluginDir + "/check_radius",
-	]
+	plugin = "check_radius"
 
 	arguments = {
 		"-H" = {
@@ -3060,7 +3077,7 @@ object CheckCommand "radius" {
 object CheckCommand "nscp_api" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_nscp_api" ]
+	plugin = "check_nscp_api"
 
 	arguments = {
 		"-H" = {
@@ -3093,7 +3110,7 @@ object CheckCommand "nscp_api" {
 object CheckCommand "rpc" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginDir + "/check_rpc" ]
+	plugin = "check_rpc"
 
 	arguments = {
 		"-H" = {
