--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -20,7 +20,7 @@
 object CheckCommand "mssql_health" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_mssql_health" ]
+	plugin = "check_mssql_health"
 
 	arguments = {
 		"--hostname" = {
@@ -184,7 +184,7 @@ object CheckCommand "mssql_health" {
 object CheckCommand "mysql_health" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_mysql_health" ]
+	plugin = "check_mysql_health"
 
 	arguments = {
 		"--hostname" = {
@@ -339,7 +339,7 @@ object CheckCommand "mysql_health" {
 object CheckCommand "db2_health" {
 	import "ipv4-or-ipv6"
 
-        command = [ PluginContribDir + "/check_db2_health" ]
+        plugin = "check_db2_health"
 
         arguments = {
                 "--hostname" = {
@@ -434,7 +434,7 @@ object CheckCommand "db2_health" {
 object CheckCommand "oracle_health" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_oracle_health" ]
+	plugin = "check_oracle_health"
 
 	arguments = {
 		"--connect" = {
@@ -523,7 +523,7 @@ object CheckCommand "oracle_health" {
 object CheckCommand "postgres" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_postgres.pl" ]
+	plugin = "check_postgres.pl"
 
 	arguments = {
 		"-H" = {
@@ -614,7 +614,7 @@ object CheckCommand "postgres" {
 object CheckCommand "mongodb" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_mongodb.py" ]
+	plugin = "check_mongodb.py"
 
 	arguments = {
 		"-H" = {
@@ -711,7 +711,7 @@ object CheckCommand "mongodb" {
 object CheckCommand "elasticsearch" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_elasticsearch" ]
+	plugin = "check_elasticsearch"
 
 	arguments = {
 		"--failure-domain" = {
@@ -748,7 +748,7 @@ object CheckCommand "elasticsearch" {
 object CheckCommand "redis" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_redis.pl" ]
+	plugin = "check_redis.pl"
 
 	arguments = {
 		"--hostname" = {
