--- a/itl/plugins-contrib.d/hardware.conf
+++ b/itl/plugins-contrib.d/hardware.conf
@@ -20,7 +20,7 @@
 object CheckCommand "hpasm" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_hpasm" ]
+	plugin = "check_hpasm"
 
 	arguments = {
 		"--hostname" = {
