--- a/itl/plugins-contrib.d/ipmi.conf
+++ b/itl/plugins-contrib.d/ipmi.conf
@@ -20,7 +20,7 @@
 object CheckCommand "ipmi-sensor" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_ipmi_sensor" ]
+	plugin = "check_ipmi_sensor"
 
 	arguments = {
 		"-H" = {
