--- a/itl/plugins-contrib.d/logmanagement.conf
+++ b/itl/plugins-contrib.d/logmanagement.conf
@@ -20,7 +20,7 @@
 object CheckCommand "logstash" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_logstash" ]
+	plugin = "check_logstash"
 
 	arguments = {
 		"-H" = {
