--- a/itl/plugins-contrib.d/network-components.conf
+++ b/itl/plugins-contrib.d/network-components.conf
@@ -18,7 +18,7 @@
  ******************************************************************************/
 
 object CheckCommand "interfacetable" {
-	command = [ PluginContribDir + "/check_interface_table_v3t" ]
+	plugin = "check_interface_table_v3t"
 
 	arguments = {
 		"-H" = {
@@ -302,7 +302,7 @@ object CheckCommand "interfacetable" {
 object CheckCommand "iftraffic" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_iftraffic.pl"]
+	plugin = "check_iftraffic.pl"
 
 	arguments = {
 		"-H" = {
@@ -350,7 +350,7 @@ object CheckCommand "iftraffic" {
 object CheckCommand "iftraffic64" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_iftraffic64.pl"]
+	plugin = "check_iftraffic64.pl"
 
 	arguments = {
 		"-H" = {
@@ -398,7 +398,7 @@ object CheckCommand "iftraffic64" {
 object CheckCommand "interfaces" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_interfaces" ]
+	plugin = "check_interfaces"
 
 	arguments = {
 		"--hostname" = "$interfaces_address$"
@@ -504,7 +504,7 @@ object CheckCommand "interfaces" {
 object CheckCommand "nwc_health" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_nwc_health" ]
+	plugin = "check_nwc_health"
 
 	arguments = {
 		"--timeout" = {
@@ -613,7 +613,7 @@ object CheckCommand "nwc_health" {
 		}
 		"--lookback" = {
 			value = "$nwc_health_lookback$"
-			description = "The amount of time you want to look back when calculating average rates. Use it for mode interface-errors or interface-usage. Without --lookback the time between two runs of check_nwc_health is the base for calculations. If you want your checkresult to be based for example on the past hour, use --lookback 3600." 
+			description = "The amount of time you want to look back when calculating average rates. Use it for mode interface-errors or interface-usage. Without --lookback the time between two runs of check_nwc_health is the base for calculations. If you want your checkresult to be based for example on the past hour, use --lookback 3600."
 		}
 		"--critical" = {
 			value = "$nwc_health_critical$"
