--- a/itl/plugins-contrib.d/network-services.conf
+++ b/itl/plugins-contrib.d/network-services.conf
@@ -20,7 +20,7 @@
 object CheckCommand "kdc" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_kdc" ]
+	plugin = "check_kdc"
 
 	arguments = {
 		"-H" = {
@@ -49,7 +49,7 @@ object CheckCommand "kdc" {
 object CheckCommand "rbl" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_rbl" ]
+	plugin = "check_rbl"
 
 	arguments = {
 		"-H" = {
