--- a/itl/plugins-contrib.d/operating-system.conf
+++ b/itl/plugins-contrib.d/operating-system.conf
@@ -18,7 +18,7 @@
  ******************************************************************************/
 
 object CheckCommand "mem" {
-	command = [ PluginContribDir + "/check_mem.pl" ]
+	plugin = "check_mem.pl"
 
 	arguments = {
 		"-u" = {
@@ -56,22 +56,18 @@ object CheckCommand "running_kernel" {
 			use_sudo = true
 		}
 
-		var args
-
 		if (use_sudo) {
-			args = [ "sudo" ]
+			return [ "sudo" ]
 		} else {
-			args = []
+			return null
 		}
-
-		args += [ PluginContribDir + "/check_running_kernel" ]
-
-		return args
 	}}
+
+	plugin = "check_running_kernel"
 }
 
 object CheckCommand "yum" {
-	command = [ PluginContribDir + "/check_yum" ]
+	plugin = "check_yum"
 
 	arguments = {
 		"--all-updates" = {
@@ -122,7 +118,7 @@ object CheckCommand "yum" {
 }
 
 object CheckCommand "iostat" {
-	command = [ PluginContribDir + "/check_iostat" ]
+	plugin = "check_iostat"
 
 	arguments = {
 		"-d" = {
@@ -149,7 +145,7 @@ object CheckCommand "iostat" {
 }
 
 object CheckCommand "iostats" {
-        command = [ PluginContribDir + "/check_iostats" ]
+        plugin = "check_iostats"
 
         arguments = {
                 "-d" = {
