--- a/itl/plugins-contrib.d/raid-controller.conf
+++ b/itl/plugins-contrib.d/raid-controller.conf
@@ -6,7 +6,7 @@
 object CheckCommand "adaptec-raid" {
 	import "plugin-check-command"
 
-	command = [ PluginDir + "/check_adaptec_raid" ]
+	plugin = "check_adaptec_raid"
 
 	arguments = {
 		"-C" = {
@@ -27,7 +27,7 @@ object CheckCommand "adaptec-raid" {
 object CheckCommand "lsi-raid" {
 	import "plugin-check-command"
 
-	command = [ PluginDir + "/check_lsi_raid" ]
+	plugin = "check_lsi_raid"
 
 	arguments = {
 		"-C" = {
