--- a/itl/plugins-contrib.d/smart-attributes.conf
+++ b/itl/plugins-contrib.d/smart-attributes.conf
@@ -5,7 +5,7 @@
 object CheckCommand "smart-attributes" {
 	import "plugin-check-command"
 
-	command = [ PluginDir + "/check_smart_attributes" ]
+	plugin = "check_smart_attributes"
 
 	arguments = {
 		"-dbj" = {
