--- a/itl/plugins-contrib.d/storage.conf
+++ b/itl/plugins-contrib.d/storage.conf
@@ -18,7 +18,8 @@
  ******************************************************************************/
 
 object CheckCommand "glusterfs" {
-	command = [ "sudo", PluginDir + "/check_glusterfs" ]
+	command = [ "sudo" ]
+	plugin = "check_glusterfs"
 
 	arguments = {
 		"--perfdata" = {
