--- a/itl/plugins-contrib.d/virtualization.conf
+++ b/itl/plugins-contrib.d/virtualization.conf
@@ -18,7 +18,7 @@
  ******************************************************************************/
 
 object CheckCommand "esxi_hardware" {
-	command = [ PluginContribDir + "/check_esxi_hardware.py" ]
+	plugin = "check_esxi_hardware.py"
 
 	arguments = {
 		"-H" = {
