--- a/itl/plugins-contrib.d/web.conf
+++ b/itl/plugins-contrib.d/web.conf
@@ -18,7 +18,7 @@
  ******************************************************************************/
 
 object CheckCommand "webinject" {
-	command = [ PluginContribDir + "/check_webinject" ]
+	plugin = "check_webinject"
 
 	arguments = {
 		"-c" = {
@@ -61,7 +61,7 @@ object CheckCommand "webinject" {
 }
 
 object CheckCommand "jmx4perl" {
-	command = [ PluginContribDir + "/check_jmx4perl" ]
+	plugin = "check_jmx4perl"
 
 	arguments = {
 		"-u" = {
@@ -213,7 +213,7 @@ object CheckCommand "jmx4perl" {
 object CheckCommand "squid" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_squid" ]
+	plugin = "check_squid"
 
 	arguments = {
 		"--host" = {
@@ -261,7 +261,7 @@ object CheckCommand "squid" {
 object CheckCommand "nginx_status" {
 		import "ipv4-or-ipv6"
 
-		command = [ PluginContribDir + "/check_nginx_status.pl" ]
+		plugin = "check_nginx_status.pl"
 
 		arguments = {
 			"--hostname" = {
@@ -329,7 +329,7 @@ object CheckCommand "nginx_status" {
 object CheckCommand "apache-status" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_apache_status.pl" ]
+	plugin = "check_apache_status.pl"
 
 	arguments = {
 		"-H" = {
@@ -369,7 +369,7 @@ object CheckCommand "apache-status" {
 object CheckCommand "ssl_cert" {
 	import "ipv4-or-ipv6"
 
-	command = [ PluginContribDir + "/check_ssl_cert" ]
+	plugin = "check_ssl_cert"
 
 	arguments = {
 		"-H" = {
