--- a/itl/plugins-contrib.d/metrics.conf
+++ b/itl/plugins-contrib.d/metrics.conf
@@ -18,7 +18,7 @@
  ******************************************************************************/
 
 object CheckCommand "graphite" {
-	command = [ PluginContribDir + "/check_graphite" ]
+	plugin = "check_graphite"
 
 	arguments = {
 		"-u" = {
