--- a/itl/plugins-contrib.d/vmware.conf
+++ b/itl/plugins-contrib.d/vmware.conf
@@ -22,7 +22,7 @@
  */
 
 template CheckCommand "vmware-esx-command" {
-	command = [ PluginContribDir + "/check_vmware_esx" ]
+	plugin = "check_vmware_esx"
 
 	arguments = {
 		"--ignore_unknown" = {
