windows: Update constants.conf for PluginPath

--- a/etc/icinga2/win32/constants.conf
+++ b/etc/icinga2/win32/constants.conf
@@ -3,16 +3,30 @@
  * the other configuration files.
  */
 
-/* The directory which contains the plugins from the Monitoring Plugins project. */
+/* Array of directories which can contain plugins from the Monitoring Plugins
+ * project or other sources.
+ */
+const PluginPath = [
+  PrefixDir + "/sbin"
+]
+
+/* The directory which contains the plugins from the Monitoring Plugins project.
+ *
+ * This value is no longer used by the ITL in Icinga >= 2.9.0!
+ */
 const PluginDir = PrefixDir + "/sbin"
 
 /* The directory which contains the Manubulon plugins.
  * Check the documentation, chapter "SNMP Manubulon Plugin Check Commands", for details.
+ *
+ * This value is no longer used by the ITL in Icinga >= 2.9.0!
  */
 const ManubulonPluginDir = PrefixDir + "/sbin"
 
 /* The directory which you use to store additional plugins which ITL provides user contributed command definitions for.
  * Check the documentation, chapter "Plugins Contribution", for details.
+ *
+ * This value is no longer used by the ITL in Icinga >= 2.9.0!
  */
 const PluginContribDir = PrefixDir + "/sbin"
 
