ITL: Add mongodb --authdb parameter support
fixes #5260

--- a/itl/plugins-contrib.d/databases.conf
+++ b/itl/plugins-contrib.d/databases.conf
@@ -633,6 +633,10 @@ object CheckCommand "mongodb" {
 			value = "$mongodb_passwd$"
 			description = "The password you want to use for that user"
 		}
+		"-a" = {
+			value = "$mongodb_authdb$"
+			description = "The database you want to authenticate against"
+		}
 		"-A" = {
 			value = "$mongodb_action$"
 			description = "The action you want to take"
