Fix macro warning from the icinga check

--- a/lib/methods/methods-itl.conf
+++ b/lib/methods/methods-itl.conf
@@ -22,6 +22,8 @@ System.assert(Internal.run_with_activation_context(function() {
 
 	template CheckCommand "icinga-check-command" use (_Internal) {
 		execute = _Internal.IcingaCheck
+
+		vars.icinga_min_version = ""
 	}
 
 	template CheckCommand "cluster-check-command" use (_Internal) {
